objects/PPRS_General_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chunk_Size__c</fullName>
        <label>Chunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Csv_Generator_Class__c</fullName>
        <label>Csv Generator Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Class__c</fullName>
        <label>Request Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Class__c</fullName>
        <label>Sync Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PPRS General Setting</label>
    <pluralLabel>PPRS General Settings</pluralLabel>
</CustomObject>